fixed subheading alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,11 @@ html {
     font-size: 60px;
     text-align: center;
   }
-  
+   h2 {
+    font-size: 20px;
+    text-align: center;
+   }
+
   p, li {
     font-size: 16px;
     line-height: 2;
